@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-    <category label="32000">
-        <setting label="32100" type="enum" id="movementtype" default="1" lvalues="32101|32102|32103|32104"/>
+	<category label="32000">
+		<setting label="32100" type="enum" id="movementtype" default="1" lvalues="32101|32102|32103|32104"/>
 		<setting label="32110" type="enum" id="movementspeed" subsetting="true" visible="eq(-1,1)" default="1" lvalues="32111|32112|32113"/>
 		<setting label="32120" type="slider" id="stayinplace" subsetting="true" visible="eq(-2,0)" default="10" range="5,5,60" option="int"/>
-        <setting label="32121" type="lsep" visible="eq(-3,2) | eq(-3,3)"/>
+		<setting label="32121" type="lsep" visible="eq(-3,2) | eq(-3,3)"/>
 		<setting label="32150" type="number" id="customx" subsetting="true" visible="eq(-4,3)" default="1" option="int"/>
 		<setting label="32160" type="number" id="customy" subsetting="true" visible="eq(-5,3)" default="1" option="int"/>
-    </category>
+	</category>
 		<category label="32001">
 		<setting id="timeformat" type="select" label="32130" default="0" lvalues="32131|32132|32133"/>
 		<setting label="32139" type="bool" id="colonblink" default="true"/>
@@ -16,22 +16,28 @@
 		<setting label="32171" type="lsep" visible="eq(-2,4)"/>
 		<setting label="32172" type="lsep" visible="eq(-3,4)"/>
 		<setting label="32173" type="lsep" visible="eq(-4,4)"/>
-    </category>
-    <category label="32005">
+	</category>
+	<category label="32005">
 		<setting label="32200" type="bool" id="additionalinformation" default="false"/>
 		<setting label="32210" type="slider" id="infoswitch" subsetting="true" visible="eq(-1,true)" default="5" range="5,5,30" option="int"/>
 		<setting label="32220" type="bool" id="nowplayinginfoshow" subsetting="true" visible="eq(-2,true)" default="false"/>
-        <setting label="32260" type="bool" id="cpuusage" subsetting="true" visible="eq(-3,true)" default="false"/>
-        <setting label="32261" type="bool" id="batterylevel" subsetting="true" visible="eq(-4,true)" default="false"/>
-        <setting label="32262" type="bool" id="freememory" subsetting="true" visible="eq(-5,true)" default="false"/>
-        <setting label="32263" type="bool" id="movies" subsetting="true" visible="eq(-6,true)" default="false"/>
-        <setting label="32264" type="bool" id="tvshows" subsetting="true" visible="eq(-7,true)" default="false"/>
-        <setting label="32265" type="bool" id="music" subsetting="true" visible="eq(-8,true)" default="false"/>
-		<setting label="32230" type="bool" id="weatherinfoshow" subsetting="true" visible="eq(-9,true)" default="false"/>
-		<setting id="weathericonformat" type="select" label="32240" subsetting="true" visible="eq(-10,true)" default="1" lvalues="32241|32242|32243|32244|32245"/>
-        <setting label="32250" type="bool" id="albumartshow" subsetting="true" visible="eq(-11,true)" default="false"/>
-		</category>
-    <category label="32010">
+		<setting label="32260" type="bool" id="cpuusage" subsetting="true" visible="eq(-3,true)" default="false"/>
+		<setting label="32261" type="bool" id="batterylevel" subsetting="true" visible="eq(-4,true)" default="false"/>
+		<setting label="32262" type="bool" id="freememory" subsetting="true" visible="eq(-5,true)" default="false"/>
+		<setting label="32266" type="bool" id="cputemp" subsetting="true" visible="eq(-6,true)" default="false"/>
+		<setting label="32267" type="bool" id="gputemp" subsetting="true" visible="eq(-7,true)" default="false"/>
+		<setting label="32268" type="bool" id="hddtemp" subsetting="true" visible="eq(-8,true)" default="false"/>
+		<setting label="32269" type="bool" id="fps" subsetting="true" visible="eq(-9,true)" default="false"/>
+		<setting label="32270" type="bool" id="cuptime" subsetting="true" visible="eq(-10,true)" default="false"/>
+		<setting label="32271" type="bool" id="tuptime" subsetting="true" visible="eq(-11,true)" default="false"/>
+		<setting label="32263" type="bool" id="movies" subsetting="true" visible="eq(-12,true)" default="false"/>
+		<setting label="32264" type="bool" id="tvshows" subsetting="true" visible="eq(-13,true)" default="false"/>
+		<setting label="32265" type="bool" id="music" subsetting="true" visible="eq(-14,true)" default="false"/>
+		<setting label="32230" type="bool" id="weatherinfoshow" subsetting="true" visible="eq(-15,true)" default="false"/>
+		<setting id="weathericonformat" type="select" label="32240" subsetting="true" visible="eq(-16,true)" default="1" lvalues="32241|32242|32243|32244|32245"/>
+		<setting label="32250" type="bool" id="albumartshow" subsetting="true" visible="eq(-17,true)" default="false"/>
+	</category>
+	<category label="32010">
 		<setting label="32310" type="action" action="RunScript(script.skin.helper.colorpicker,skinstring=screensaver.digitalclock.hourcolor)"/>
 		<setting id="hourcolor" subsetting="true" type="bool" label="32311" default="false"/>
 		<setting id="hourtr" subsetting="true" type="bool" label="32312" default="false"/>
@@ -54,11 +60,11 @@
 		<setting id="iconcolor" subsetting="true" type="bool" label="32371" default="false"/>
 		<setting id="icontr" subsetting="true" type="bool" label="32372" default="false"/>
 	</category>
-    <category label="32020">
+	<category label="32020">
 		<setting label="32500" type="action" action="RunScript(script.skin.helper.colorpicker,skinstring=screensaver.digitalclock.shadowcolor)"/>
 		<setting id="backgroundchoice" type="enum" label="32510" default="0" lvalues="32511|32512|32513|32514"/>
 		<setting label="32520" type="action" visible="eq(-1,0)" action="RunScript(script.skin.helper.colorpicker,skinstring=screensaver.digitalclock.backgroundcolor)"/>
-        <setting label="32531" type="lsep" visible="eq(-2,1)"/>
+		<setting label="32531" type="lsep" visible="eq(-2,1)"/>
 		<setting label="32530" type="image" id="file" subsetting="true" visible="eq(-3,1)" default="images" source="pictures"/>
 		<setting label="32540" type="folder" id="folder" subsetting="true" visible="eq(-4,2)" default="images" source="pictures"/>
 		<setting label="32550" type="bool" id="randomimages" subsetting="true" visible="eq(-5,2)" default="false"/>
@@ -66,8 +72,8 @@
 		<setting id="skinhelper" type="select" label="32580" subsetting="true" visible="eq(-7,3)" default="3" lvalues="32581|32582|32583|32584"/>
 		<setting id="imagetimer" type="select" label="32560" subsetting="true" visible="eq(-8,2) | eq(-8,3)" default="0" lvalues="32561|32562|32563|32564|32565|32566|32567|32568|32569|32570|32571|32572"/>
 	</category>
-    <category label="32025">
-        <setting id="zoomlevel" type="select" label="32600" default="100" values="100|110|120|130|140|150|160|170|180|190|200"/>
+	<category label="32025">
+		<setting id="zoomlevel" type="select" label="32600" default="100" values="100|110|120|130|140|150|160|170|180|190|200"/>
 		<setting label="32610" type="bool" id="logout" default="false"/>
 		<setting label="32611" type="bool" id="logoutplaying" subsetting="true" visible="eq(-1,true)" default="false"/>
 		<setting label="32612" type="number" id="logouttime" subsetting="true" visible="eq(-2,true)" default="10" option="int"/>
